--- a/mi-apps-dash/.devcontainer/devcontainer.json
+++ b/mi-apps-dash/.devcontainer/devcontainer.json
@@ -1,11 +1,18 @@
-FROM python:3.9-slim
-
-WORKDIR /app
-
-COPY requirements.txt .
-
-RUN pip install --no-cache-dir -r requirements.txt
-
-COPY ./src ./src
-
-CMD ["python", "src/app.py"]
+{
+  "name": "Dash Dev Container",
+  "build": {
+    "dockerfile": "Dockerfile",
+    "context": ".."
+  },
+  "customizations": {
+    "vscode": {
+      "settings": {
+        "terminal.integrated.shell.linux": "/bin/bash"
+      },
+      "extensions": [
+        "ms-python.python",
+        "ms-toolsai.jupyter"
+      ]
+    }
+  }
+}
